fix: vercel.json static resource rewrites for SPA

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
   "rewrites": [
+    { "source": "/static/(.*)", "destination": "/static/$1" },
+    { "source": "/favicon.ico", "destination": "/favicon.ico" },
+    { "source": "/manifest.json", "destination": "/manifest.json" },
+    { "source": "/logo192.png", "destination": "/logo192.png" },
+    { "source": "/logo512.png", "destination": "/logo512.png" },
+    { "source": "/robots.txt", "destination": "/robots.txt" },
+    { "source": "/icons/(.*)", "destination": "/icons/$1" },
+    { "source": "/data/(.*)", "destination": "/data/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 } 
